feat(ChessboardPosition): creat a single positionXToLetter constant and remove unnecessary checking of position values